tests/miniJava/pos/001238_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( false ) if ( 0 ) { } else { } } }
