tests/miniJava/neg/000093_mutation.MiniJava
class java { public else void Main ( String [ ] java ) { { } } }
